Radio-fix children not stretching bug (#6665)

--- a/packages/wix-style-react/src/Radio/Radio.st.css
+++ b/packages/wix-style-react/src/Radio/Radio.st.css
@@ -87,4 +87,5 @@
 .root::label {
   cursor: pointer;
   padding-inline-start: 12px;
+  width: 100%;
 }
